--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
   "dependencies": {
     "archiver": "^0.15.1",
     "async": "^1.4.2",
-    "gcloud": "^0.23.0",
-    "multiline": "^1.0.2"
+    "gcloud": "^0.24.0",
+    "methmeth": "^1.1.0",
+    "multiline": "^1.0.2",
+    "slug": "^0.9.1",
+    "split-array-stream": "^1.0.0",
+    "string-format-obj": "^1.0.1",
+    "through2": "^2.0.0"
   },
   "devDependencies": {
     "standard": "^5.3.1"
