--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "dependencies": {
     "archiver": "^0.15.1",
     "async": "^1.4.2",
+    "deep-assign": "^1.0.0",
     "gce-output-stream": "^0.1.0",
     "gcloud": "^0.24.0",
     "multiline": "^1.0.2",
-    "object-assign": "^4.0.1",
     "pumpify": "^1.3.3",
     "slug": "^0.9.1",
     "string-format-obj": "^1.0.1",
