use `stable` Node, custom startup script, and fix bugs re-using VMs

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "async": "^1.4.2",
     "deep-assign": "^1.0.0",
     "gce-output-stream": "^0.1.0",
-    "gcloud": "^0.24.0",
+    "gcloud": "github:googlecloudplatform/gcloud-node",
     "multiline": "^1.0.2",
     "pumpify": "^1.3.3",
     "slug": "^0.9.1",
