--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   "repository": "stephenplusplus/gcloud-deploy",
   "license": "MIT",
   "dependencies": {
+    "@google-cloud/compute": "^0.9.0",
+    "@google-cloud/storage": "^1.5.2",
     "archiver": "^0.15.1",
     "async": "^1.4.2",
     "deep-assign": "^1.0.0",
     "gce-output-stream": "^0.1.0",
-    "gcloud": "github:googlecloudplatform/gcloud-node",
     "multiline": "^1.0.2",
     "pumpify": "^1.3.3",
     "slug": "^0.9.1",
